--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,21 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-color: rgba(135,201,251,0.8);
+  /* background-color: rgba(232,227,213,0.8); */
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+@media (max-width: 1200px) {
+  body {
+    background-color: #E9E4D6 !important;
+  }
+}
+
+@media (min-width: 1201px) {
+  body {
+    background-color: #CCC8C2 !important;
+  }
 }
 
 a {
@@ -23,7 +35,7 @@ a {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #3C62A5;
+  background-color: #1C1B1C;
   border-radius: 1rem;
 }
 
@@ -39,21 +51,21 @@ a {
 /* Up Arrow */
 ::-webkit-scrollbar-button:single-button:vertical:decrement {
   border-width: 0 5px 5px 5px;
-  border-color: transparent transparent #3C62A5 transparent;
+  border-color: transparent transparent #1C1B1C transparent;
 }
 /* Down Arrow */
 ::-webkit-scrollbar-button:single-button:vertical:increment {
   border-width: 5px 5px 0 5px;
-  border-color: #3C62A5 transparent transparent transparent;
+  border-color: #1C1B1C transparent transparent transparent;
 }
 /* Left Arrow */
 ::-webkit-scrollbar-button:single-button:horizontal:decrement {
   border-width: 5px 5px 5px 0;
-  border-color: transparent #3C62A5 transparent transparent;
+  border-color: transparent #1C1B1C transparent transparent;
 }
 /* Right Arrow */
 ::-webkit-scrollbar-button:single-button:horizontal:increment {
   border-width: 5px 0 5px 5px;
-  border-color: transparent transparent transparent #3C62A5;
+  border-color: transparent transparent transparent #1C1B1C;
 }
 
